--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta charset="utf-8" />
-    <title> Our First Page</title>
+    <title> </title>
     <link rel="stylesheet" href="css/normalize.css" />
     <link rel="stylesheet" href="css/web.css" />
     <link rel="stylesheet" href="css/all.min.css  " />
